--- a/app/scripts/preferences/templates/preferences.hbs
+++ b/app/scripts/preferences/templates/preferences.hbs
@@ -5,7 +5,7 @@
       <div class="panel-heading">
         <h2 class="panel-title nm-section-title">Profile</h2>
       </div>
-      <div class="panel-body"></div>
+      <div class="panel-body" id="profile"></div>
     </div>
   </div>
 
