Fixed new preference page responsiveness problem

--- a/app/scripts/preferences/templates/preferences.hbs
+++ b/app/scripts/preferences/templates/preferences.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-3" id="user-profile">
+  <div class="col-md-3" id="user-profile">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h2 class="panel-title nm-section-title">Profile</h2>
