Change venues to venue

--- a/app/scripts/venues/templates/venue_availability.hbs
+++ b/app/scripts/venues/templates/venue_availability.hbs
@@ -2,8 +2,8 @@
   <div class="col-md-8 col-md-offset-2">
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-      <li><a href="/venues" role="tab" data-toggle="tab">Venue Information</a></li>
-      <li class="active"><a href="#" role="tab" data-toggle="tab">Find Available Venues</a></li>
+      <li><a href="/venue" role="tab" data-toggle="tab">Venue Information</a></li>
+      <li class="active"><a role="tab" data-toggle="tab">Find Available Venues</a></li>
     </ul>
 
     <h1 class="nm-page-heading">Venue Availability</h1>
