--- a/app/scripts/venues/templates/venue_information.hbs
+++ b/app/scripts/venues/templates/venue_information.hbs
@@ -2,7 +2,7 @@
   <div class="col-md-8 col-md-offset-2">
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-      <li class="active"><a href="#" role="tab" data-toggle="tab">Venue Information</a></li>
+      <li class="active"><a role="tab" data-toggle="tab">Venue Information</a></li>
       <li><a href="/venueavailability" role="tab" data-toggle="tab">Find Available Venues</a></li>
     </ul>
 
