--- a/app/scripts/venues/templates/venue_information.hbs
+++ b/app/scripts/venues/templates/venue_information.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-8 col-md-offset-2">
+  <div class="col-md-12">
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
       <li class="active"><a role="tab" data-toggle="tab">Venue Information</a></li>
@@ -21,34 +21,49 @@
     <hr>
     {{#if selectedVenue}}
       <h3>Venue Information for "{{this.selectedVenueName}}"</h3>
-      {{#each selectedVenue}}
-        <hr>
-        <div class="row">
-          <div class="col-sm-2">
-            <strong>{{this.day}}</strong>
+
+      <div class="nm-timetable-flex">
+        {{#each selectedVenue}}
+          <div class="nm-timetable-flex-row">
+            <div class="nm-timetable-flex-cell"><strong>{{this.shortDay}}</strong></div>
+            {{#each this.timetable}}
+              <div class="nm-timetable-flex-cell {{this.class}}" style="flex-grow: {{this.width}}">
+                <div class="nm-timetable-flex-module-name">{{this.module}}</div>
+              </div>
+            {{/each}}
           </div>
-          <div class="col-sm-10">
-            <div class="row">
-              {{#if this.classes}}
-                {{#each this.classes}}
-                  <div class="col-sm-3">
-                    <dl>
-                      <dd><strong>{{this.StartTime}} - {{this.EndTime}}</strong></dd>
-                      <dd><a href="/modules/{{this.ModuleCode}}">{{this.ModuleCode}}</a></dd>
-                      <dd>{{this.LessonType}} [{{this.ClassNo}}]</dd>
-                      <dd>{{this.WeekText}}</dd>
-                    </dl>
+        {{/each}}
+      </div>
+      <hr>
+      <div>
+        {{#each selectedVenue}}
+          <div class="row">
+            <div class="col-sm-2">
+              <strong>{{this.day}}</strong>
+            </div>
+            <div class="col-sm-10">
+              <div class="row">
+                {{#if this.classes}}
+                  {{#each this.classes}}
+                    <div class="col-sm-3">
+                      <dl>
+                        <dd><strong>{{this.StartTime}} - {{this.EndTime}}</strong></dd>
+                        <dd><a href="/modules/{{this.ModuleCode}}">{{this.ModuleCode}}</a></dd>
+                        <dd>{{this.LessonType}} [{{this.ClassNo}}]</dd>
+                        <dd>{{this.WeekText}}</dd>
+                      </dl>
+                    </div>
+                  {{/each}}
+                {{else}}
+                  <div class="col-md-12">
+                    <p>No classes</p>
                   </div>
-                {{/each}}
-              {{else}}
-                <div class="col-md-12">
-                  <p>No classes</p>
-                </div>
-              {{/if}}
+                {{/if}}
+              </div>
             </div>
           </div>
-        </div>
-      {{/each}}
+        {{/each}}
+      </div>
     {{else}}
       {{#if this.selectedVenueName}}
         <p>No venue information found for <strong>{{this.selectedVenueName}}</strong>.</p>
