--- a/app/scripts/venues/templates/venue_availability.hbs
+++ b/app/scripts/venues/templates/venue_availability.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-8 col-md-offset-2">
+  <div class="col-md-12">
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
       <li><a href="/venue" role="tab" data-toggle="tab">Venue Information</a></li>
