--- a/app/scripts/venues/templates/venue_availability.hbs
+++ b/app/scripts/venues/templates/venue_availability.hbs
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-      <li><a href="/venue" role="tab" data-toggle="tab">Venue Information</a></li>
+      <li><a href="/venues" role="tab" data-toggle="tab">Venue Information</a></li>
       <li class="active"><a role="tab" data-toggle="tab">Find Available Venues</a></li>
     </ul>
 
