Fixed bug of timing row obscuring Monday's venue links

--- a/app/styles/_timetable-flex.scss
+++ b/app/styles/_timetable-flex.scss
@@ -71,6 +71,7 @@
         flex-grow: 2;
         font-size: 12px;
         font-weight: bold;
+        height: 100%;
         left: -13px;
         position: relative;
         text-align: left;
