Added friends view

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -55,7 +55,7 @@ $navmenu-width: 200px;
 // Components w/ JavaScript
 //@import "bootstrap-sass-official/assets/stylesheets/bootstrap/modals";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/tooltip";
-//@import "bootstrap-sass-official/assets/stylesheets/bootstrap/popovers";
+@import "bootstrap-sass-official/assets/stylesheets/bootstrap/popovers";
 //@import "bootstrap-sass-official/assets/stylesheets/bootstrap/carousel";
 
 // Utility classes
