Improved friends page styling

--- a/app/scripts/friends/templates/friend_add_modal.hbs
+++ b/app/scripts/friends/templates/friend_add_modal.hbs
@@ -1,4 +1,4 @@
-<div style="width: 200px; background-color: #fff;">
+<div class="nm-friends-add-modal">
   <div class="form-group">
     <label for="name">Name of Friend</label>
     <input type="text" class="form-control" id="name" placeholder="Enter friend's name">
