--- a/app/scripts/friends/templates/friends.hbs
+++ b/app/scripts/friends/templates/friends.hbs
@@ -1,10 +1,17 @@
 <div class="row">
   <div class="col-md-12">
     <div class="col-md-3">
-      <button type="button" class="btn btn-primary js-add-timetable-popover" data-toggle="popover">Add Friends Timetable</button>
-      <button type="button" class="btn btn-warning js-merge-timetables">Merge Selected</button>
-      <div class="row">
-        <div class="col-md-12 nm-friends-list">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2 class="panel-title nm-section-title">Friends</h2>
+          <button type="button" class="btn btn-sm btn-warning js-merge-timetables pull-right">
+            <i class="fa fa-compress"></i>
+          </button>
+          <button type="button" class="btn btn-sm btn-primary js-add-timetable-popover pull-right" data-toggle="popover">
+            <i class="fa fa-plus"></i>
+          </button>
+        </div>
+        <div class="panel-body nm-friends-list">
         </div>
       </div>
     </div>
