Display selected list of friends

--- a/app/scripts/friends/templates/friends.hbs
+++ b/app/scripts/friends/templates/friends.hbs
@@ -4,10 +4,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title nm-section-title">Friends</h2>
-          <button type="button" class="btn btn-sm btn-warning js-merge-timetables pull-right">
-            <i class="fa fa-compress"></i>
-          </button>
-          <button type="button" class="btn btn-sm btn-primary js-add-timetable-popover pull-right" data-toggle="popover">
+          <button type="button" class="btn btn-sm btn-primary js-nm-friends-add pull-right" data-toggle="popover">
             <i class="fa fa-plus"></i>
           </button>
         </div>
@@ -15,7 +12,23 @@
         </div>
       </div>
     </div>
-    <div class="col-md-9 nm-friends-timetable">
+    <div class="col-md-9">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2 class="panel-title nm-section-title">Timetable</h2>
+        </div>
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-md-12">
+              <p>Displaying the timetable(s) of:</p>
+              <div class="nm-friends-selected-list"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 nm-friends-timetable"></div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
