--- a/app/scripts/friends/templates/friend_add_modal.hbs
+++ b/app/scripts/friends/templates/friend_add_modal.hbs
@@ -1,4 +1,4 @@
-<div class="nm-friends-add-modal">
+<div class="js-nm-friends-add-popover">
   <div class="form-group">
     <label for="name">Name of Friend</label>
     <input type="text" class="form-control" id="name" placeholder="Enter friend's name">
