--- a/app/scripts/venues/templates/venue_information.hbs
+++ b/app/scripts/venues/templates/venue_information.hbs
@@ -42,8 +42,8 @@
             </div>
             <div class="col-sm-10">
               <div class="row">
-                {{#if this.classes}}
-                  {{#each this.classes}}
+                {{#if this.lessons}}
+                  {{#each this.lessons}}
                     <div class="col-sm-3">
                       <dl>
                         <dd><strong>{{this.StartTime}} - {{this.EndTime}}</strong></dd>
@@ -55,7 +55,7 @@
                   {{/each}}
                 {{else}}
                   <div class="col-md-12">
-                    <p>No classes</p>
+                    <p>No lessons</p>
                   </div>
                 {{/if}}
               </div>
