Can render somebody's timetable on Friends page

--- a/app/scripts/friends/templates/friend_add_modal.hbs
+++ b/app/scripts/friends/templates/friend_add_modal.hbs
@@ -7,5 +7,5 @@
     <label for="url">Timetable URL</label>
     <input type="url" class="form-control" id="url" placeholder="Enter friend's timetable URL">
   </div>
-  <button class="btn btn-warning js-add-friend-timetable">Add</button>
+  <button class="btn btn-warning js-nm-friends-add">Add</button>
 </div>
