--- a/app/scripts/friends/templates/friends.hbs
+++ b/app/scripts/friends/templates/friends.hbs
@@ -1,32 +1,31 @@
 <div class="row">
-  <div class="col-md-12">
-    <div class="col-md-3">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h2 class="panel-title nm-section-title">Friends</h2>
-          <button type="button" class="btn btn-sm btn-primary js-nm-friends-add pull-right" data-toggle="popover">
-            <i class="fa fa-plus"></i>
-          </button>
-        </div>
-        <div class="panel-body nm-friends-list">
-        </div>
+  <div class="col-md-3">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h2 class="panel-title nm-section-title">Friends</h2>
+        <button type="button" class="btn btn-sm btn-primary js-nm-friends-add-button pull-right" data-toggle="popover">
+          <i class="fa fa-plus"></i>
+        </button>
+      </div>
+      <div class="panel-body nm-friends-list">
       </div>
     </div>
-    <div class="col-md-9">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h2 class="panel-title nm-section-title">Timetable</h2>
+  </div>
+  <div class="col-md-9">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h2 class="panel-title nm-section-title">Timetable</h2>
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-md-12">
+            <p>Displaying the timetable(s) of:</p>
+            <div class="nm-friends-selected-list"></div>
+          </div>
         </div>
-        <div class="panel-body">
-          <div class="row">
-            <div class="col-md-12">
-              <p>Displaying the timetable(s) of:</p>
-              <div class="nm-friends-selected-list"></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12 nm-friends-timetable"></div>
-          </div>
+        <hr>
+        <div class="row">
+          <div class="col-md-12 nm-friends-timetable"></div>
         </div>
       </div>
     </div>
