--- a/app/styles/_timetable-flex.scss
+++ b/app/styles/_timetable-flex.scss
@@ -49,6 +49,12 @@
         &.box-6 {
           border-bottom: 5px solid transparent;
         }
+        &.box-7 {
+          border-bottom: 6px solid transparent;
+        }
+        &.box-8 {
+          border-bottom: 7px solid transparent;
+        }
         &:last-child {
           border-bottom: $border-style;
           border-right: none;
@@ -115,9 +121,36 @@
     &.box-6 {
       border-right: 5px solid transparent;
     }
+    &.box-7 {
+      border-bottom: 6px solid transparent;
+    }
+    &.box-8 {
+      border-bottom: 7px solid transparent;
+    }
     &.nm-timetable-day {
       border: none !important;
     }
+  }
+  .nm-flex-clash-1 {
+    background-color: #ff0;
+  }
+  .nm-flex-clash-2 {
+    background-color: #ffcf00;
+  }
+  .nm-flex-clash-3 {
+    background-color: #ff9f00;
+  }
+  .nm-flex-clash-4 {
+    background-color: #ff5f00;
+  }
+  .nm-flex-clash-5 {
+    background-color: #ff2f00;
+  }
+  .nm-flex-clash-6 {
+    background-color: #f00;
+  }
+  .nm-flex-clash-max {
+    background-color: #af0000;
   }
 }
 
