Style up friends page

--- a/app/scripts/friends/templates/friends.hbs
+++ b/app/scripts/friends/templates/friends.hbs
@@ -2,10 +2,10 @@
   <div class="col-md-3">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h2 class="panel-title nm-section-title">Friends</h2>
-        <button type="button" class="btn btn-sm btn-primary js-nm-friends-add-button pull-right" data-toggle="popover">
+        <button type="button" class="btn btn-xs btn-primary js-nm-friends-add-button pull-right" data-toggle="popover">
           <i class="fa fa-plus"></i>
         </button>
+        <h2 class="panel-title nm-section-title">Friends</h2>
       </div>
       <div class="panel-body nm-friends-list">
       </div>
