--- a/app/scripts/friends/templates/friends_selected_list_item.hbs
+++ b/app/scripts/friends/templates/friends_selected_list_item.hbs
@@ -1,4 +1,4 @@
 {{#if selected}}
-  {{name}} <span class="js-nm-friends-deselect">×</span>
+  {{name}} &nbsp; <span class="js-nm-friends-deselect"><i class="fa fa-times"></i></span>
 {{/if}}
   
