--- a/app/scripts/friends/templates/friends_list_item.hbs
+++ b/app/scripts/friends/templates/friends_list_item.hbs
@@ -1,4 +1,4 @@
-<a class="pull-left" href="#">
+<!-- <a class="pull-left" href="#">
   <img class="media-object img-responsive img-rounded" width="64" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpf1/v/t1.0-1/c11.0.365.365/10411737_10152469716533354_5778333944655082211_n.jpg?oh=8d9fb4bf73cccfedc110736aea9bf6a8&oe=54DD949C&__gda__=1420939566_c6dc55ed957f1f333991f7badbaa8d9e" alt="{{name}} thumbnail">
 </a>
 <div class="media-body">
@@ -9,4 +9,9 @@
   </h4>
   <p>Computer Science</p>
   <a class="js-nm-friends-delete">Delete</a>
-</div>
+</div> -->
+<a class="js-nm-friends-delete nm-friends-delete"><i class="fa fa-trash-o"></i></a>
+<h5 class="media-heading">
+  <input type="checkbox" class="js-nm-friends-select-checkbox" {{#if selected}}checked{{/if}}> &nbsp; 
+  {{name}}
+</h5>
