--- a/app/scripts/friends/templates/friends_list_item.hbs
+++ b/app/scripts/friends/templates/friends_list_item.hbs
@@ -12,6 +12,7 @@
 </div> -->
 <a class="js-nm-friends-delete nm-friends-delete"><i class="fa fa-trash-o"></i></a>
 <h5 class="media-heading">
-  <input type="checkbox" class="js-nm-friends-select-checkbox" {{#if selected}}checked{{/if}}> &nbsp; 
+  <input type="checkbox" class="js-nm-friends-select-checkbox" {{#if selected}}checked{{/if}}> &nbsp;
+  <img class="img-rounded" src="http://graph.facebook.com/{{fbid}}/picture" width="40"> &nbsp;
   {{name}}
 </h5>
