--- a/app/scripts/collab/templates/collab_group.hbs
+++ b/app/scripts/collab/templates/collab_group.hbs
@@ -1,21 +1,34 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-9">
     <h1>{{group.name}}</h1>
     <hr>
     <div class="row">
-      <div class="col-md-9">
+      <div class="col-md-12">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-8">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h3 class="panel-title">Next Meeting</h3>
               </div>
               <div class="panel-body">
-                
+                <div class="row">
+                  <div class="col-md-4">
+                    <h5 class="highlight">Date</h5>
+                    <h2>15th Nov, Friday</h2>
+                  </div>
+                  <div class="col-md-4">
+                    <h5 class="highlight">Time</h5>
+                    <h2>09:00</h2>
+                  </div>
+                  <div class="col-md-4">
+                    <h5 class="highlight">Venue</h5>
+                    <h2>COM1-0202</h2>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h3 class="panel-title">Members</h3>
@@ -39,15 +52,15 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Group Chat</h3>
-          </div>
-          <div class="panel-body">
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Group Chat</h3>
+      </div>
+      <div class="panel-body">
 
-          </div>
-        </div>
       </div>
     </div>
   </div>
