--- a/app/scripts/collab/templates/collab_group.hbs
+++ b/app/scripts/collab/templates/collab_group.hbs
@@ -54,13 +54,19 @@
       </div>
     </div>
   </div>
-  <div class="col-md-3">
-    <div class="panel panel-default">
+  <div class="col-md-3 nm-collab-message-container">
+    <div class="panel panel-default nm-collab-message">
+
       <div class="panel-heading">
         <h3 class="panel-title">Group Chat</h3>
       </div>
-      <div class="panel-body">
+      <div class="panel-body nm-collab-message-content-container">
+        <div class="nm-collab-message-content">
 
+        </div>
+      </div>
+      <div class="nm-collab-message-input-container">
+        <input type="text" class="form-control js-nm-collab-input-message" placeholder="Enter your message">
       </div>
     </div>
   </div>
