Sync meeting details

--- a/app/scripts/collab/templates/collab_group.hbs
+++ b/app/scripts/collab/templates/collab_group.hbs
@@ -10,21 +10,7 @@
               <div class="panel-heading">
                 <h3 class="panel-title">Next Meeting</h3>
               </div>
-              <div class="panel-body">
-                <div class="row">
-                  <div class="col-md-4">
-                    <h5 class="highlight">Date</h5>
-                    <h2>15th Nov, Friday</h2>
-                  </div>
-                  <div class="col-md-4">
-                    <h5 class="highlight">Time</h5>
-                    <h2>09:00</h2>
-                  </div>
-                  <div class="col-md-4">
-                    <h5 class="highlight">Venue</h5>
-                    <h2>COM1-0202</h2>
-                  </div>
-                </div>
+              <div class="panel-body nm-collab-meeting-details">
               </div>
             </div>
           </div>
