Improve collab interface

--- a/app/styles/_buttons.scss
+++ b/app/styles/_buttons.scss
@@ -9,4 +9,8 @@
   background-color: transparent;
   border-color: $brand-primary;
   color: $brand-primary;
+  &:hover {
+    background-color: $brand-primary;
+    color: #fff;
+  }
 }
