--- a/app/scripts/collab/templates/collab_group.hbs
+++ b/app/scripts/collab/templates/collab_group.hbs
@@ -1,11 +1,12 @@
-<div class="row">
-  <div class="col-md-9">
+<div class="row nm-collab-container">
+  <div class="nm-collab-title-section">
     <h1>{{group.name}}</h1>
-    <hr>
+  </div>
+  <div class="col-md-12">
     <div class="row">
       <div class="col-md-12">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-6">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h3 class="panel-title">Next Meeting</h3>
@@ -14,7 +15,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h3 class="panel-title">Members</h3>
@@ -23,11 +24,25 @@
                 <div>
                   {{#each group.members}}
                     <h5>
-                      <img class="img-rounded" src="http://graph.facebook.com/{{this.fbid}}/picture" width="40"> &nbsp; 
-                      {{this.name}}
+                      <img class="img-rounded" src="http://graph.facebook.com/{{this.fbid}}/picture" width="40" data-placement="bottom" title="{{this.name}}"> &nbsp; {{this.name}}
                     </h5>
                   {{/each}}
                 </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 nm-collab-message-container">
+            <div class="panel panel-default nm-collab-message">
+              <div class="panel-heading">
+                <h3 class="panel-title">Group Chat</h3>
+              </div>
+              <div class="panel-body nm-collab-message-content-container">
+                <div class="nm-collab-message-content">
+
+                </div>
+              </div>
+              <div class="nm-collab-message-input-container">
+                <input type="text" class="form-control js-nm-collab-input-message" placeholder="Enter your message">
               </div>
             </div>
           </div>
@@ -37,22 +52,6 @@
 
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-3 nm-collab-message-container">
-    <div class="panel panel-default nm-collab-message">
-
-      <div class="panel-heading">
-        <h3 class="panel-title">Group Chat</h3>
-      </div>
-      <div class="panel-body nm-collab-message-content-container">
-        <div class="nm-collab-message-content">
-
-        </div>
-      </div>
-      <div class="nm-collab-message-input-container">
-        <input type="text" class="form-control js-nm-collab-input-message" placeholder="Enter your message">
       </div>
     </div>
   </div>
