--- a/app/styles/_timetable-flex.scss
+++ b/app/styles/_timetable-flex.scss
@@ -106,6 +106,9 @@
       height: 15px;
       margin-top: 5px;
     }
+    .nm-timetable-flex-module-lesson-type {
+      font-size: 12px;
+    }
     &.box-2 {
       border-right: 1px solid transparent;
     }
