Added 5-day timetable layout

--- a/app/scripts/timetable_flex/templates/timetable_flex.hbs
+++ b/app/scripts/timetable_flex/templates/timetable_flex.hbs
@@ -1,5 +1,5 @@
 <div class="nm-timetable-flex-container">
-  <div class="nm-timetable-flex">
+  <div class="nm-timetable-flex {{#if fiveDayLayout}} nm-timetable-flex-five-day {{/if}}">
     <div class="nm-timetable-flex-row nm-timetable-timing">
       <div class="nm-timetable-flex-cell nm-timetable-day"></div>
       <div class="nm-timetable-flex-cell">0800</div>
