Show which members do not have school

--- a/app/scripts/friends/templates/friends.hbs
+++ b/app/scripts/friends/templates/friends.hbs
@@ -21,6 +21,8 @@
           <div class="col-md-12">
             <p>Displaying the timetable(s) of:</p>
             <div class="nm-friends-selected-list"></div>
+            <br>
+            <div class="nm-friends-not-going-school"></div>
           </div>
         </div>
         <hr>
