Style not going list

--- a/app/scripts/friends/templates/friends_not_going_school.hbs
+++ b/app/scripts/friends/templates/friends_not_going_school.hbs
@@ -3,7 +3,7 @@
   <ul>
     {{#each daysNotGoingToSchool}}
       {{#if peopleNotGoing}}
-        <li>{{day}}: {{peopleNotGoing}}</li>
+        <li><strong>{{day}}:</strong> {{peopleNotGoing}}</li>
       {{/if}}
     {{/each}}
   </ul>
