--- a/app/styles/_timetable-flex.scss
+++ b/app/styles/_timetable-flex.scss
@@ -135,10 +135,10 @@
       border-right: 5px solid transparent;
     }
     &.box-7 {
-      border-bottom: 6px solid transparent;
+      border-right: 6px solid transparent;
     }
     &.box-8 {
-      border-bottom: 7px solid transparent;
+      border-right: 7px solid transparent;
     }
     &.nm-timetable-day {
       border: none !important;
