--- a/app/scripts/venues/templates/venue_information.hbs
+++ b/app/scripts/venues/templates/venue_information.hbs
@@ -44,7 +44,7 @@
               <div class="row">
                 {{#if this.lessons}}
                   {{#each this.lessons}}
-                    <div class="col-sm-3">
+                    <div class="col-xs-3">
                       <dl>
                         <dd><strong>{{this.StartTime}} - {{this.EndTime}}</strong></dd>
                         <dd><a href="/modules/{{this.ModuleCode}}">{{this.ModuleCode}}</a></dd>
